2000-09-19  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* MNI/TagSet.pm:
	* MNI/TagPoint.pm: new.  Future replacement of MNI::Tag.
	A TagSet corresponds to a `.tag' file; it holds a list of
	TagPoint objects.  The TagPoint objects allow read access to
	all fields in the tag.

	* t/tag.t: new.  Exercise the MNI::TagSet.

2000-09-14  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* MNI/Tag.pm: add POD documentation of all user-level functions.

2000-04-11  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* MNI/Tag.pm (_volume): change diagnostics.

2000-03-13  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* MNI/Batch.pm (StartJob): don't clear entire set of SyncFiles,
	only the ones corresponding to the PID of the starting job.
	(Synchronize): fix bug that prevented counting number of outstanding
	jobs; reported by Jason Lerch.

	* t/batch-2.t: new.  Test Synchronize() function.

2000-02-21  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* MNI/Startup.pm (startup): if TMPDIR is not defined, check for /usr/tmp,
	/var/tmp, and /tmp; use the first directory found for TmpDir.

Sun Jan 16 15:37:54 2000  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* MNI.pm: bump VERSION to 0.06.

Sun Jan 16 15:16:02 2000  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* MNI/Tag.pm (load, save): qualify `open' and `close' calls with CORE:: to 
	distinguish them from Tag::open and Tag::close.

Sun Jan 16 14:58:54 2000  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* NEWS: new file.  Summary of USER-visible changes between
 	releases.

	* MNI/Batch.pm (StartJob): clear %SyncFiles before assigning to it
 	when starting new job; otherwise old values for same JobPID will
 	be returned.

	* t/batch-0.t: new file.  Test basic features of MNI::Batch.pm,
 	mostly the return values.

	* t/batch-1.t: renamed from 'batch.t' in order that it be executed
	_after_ batch-0.t.

	* MNI/Batch.pm (QueueCommands): return startfile (if StartJob
 	called), along with finish and fail files.
